 - SF patch [2615647] Greek translation for xmlui version 1.5.1 submitted to Google code
 - SF patch [2612341] Patch for SF Feature Request [2609564] group delete confirm
 - SF patch [2612034] Remove Edit/Delete Button for Special Groups
 - SF patch [2636514] multilingual input-forms reenabled
 - Added blanks between label and text in subscription email.
 
(Elliot Metsger)
 - Patch for SF bug #2016130 checksum checker can not retrieve very large bitstream

(Tim Donohue)
 - [2433852] Add File Format Descriptions to XMLUI 1.5.x
 - [2462293] Enable Google Sitemaps for XMLUI
 - Fixed small bug in XMLUI's org.dspace.app.xmlui.cocoon.DSpaceMETSGenerator which caused Repository-wide METS file to fail to generate.
 - [2477820] DSpace 1.5 XMLUI - Enable METS <amdSec> using crosswalks
 - Fix for SF bug [2541285] Submission Forms don't preserve order of values
 - Fix for SF bug [2543413] XMLUI Submission forms display validation errors on other fields during add/remove
 - Fix for SF bug [2557654] Search with "%" causes NullPointerException in XMLUI
 - Fix for Jira bug [DS-86] XMLUI Feedback form does not include any protection from spamming
 - Fix for Jira [DS-87] XMLUI file download links break in Google search results if file 'sequence' number changes.
 - Fix for Jira [DS-95] XMLUI: Visiting an item page with a trailing slash returns a 404 message
 - Fix for Jira [DS-96] XMLUI Wing-Framework 'Radio' class doesn't support adding radio buttons which are unselected by default.
 - Fix for Jira [DS-97] XMLUI does not come with a robots.txt out-of-the-box. It also does not provide suggestions for loading global static content.
 - [1712125] Allow dsrun and dsrun.bat to use JAVA_OPTS

(Kim Shepherd)
 - [2385187] Fix for toDate method in DCDate

(Andrea Bollini /Kim Shepherd) 
 - [DS-47] Add support for rendering DOI links in JSPUI (1.4, 1.5) - ID: 2521493
 
(Andrea Bollini)
 - S.F. Patch 2645776 for Bug 2645754 SubmissionController is not thread safe