@@ -80,6 +80,7 @@ public class OrderFormat
 	public final static String AUTHOR = "author";
 	public final static String TITLE  = "title";
 	public final static String TEXT   = "text";
+	public final static String DATE   = "date";
 	
 	// Array of all available order delegates - avoids excessive calls to plugin manager
 	private final static String[] delegates = PluginManager.getAllPluginNames(OrderFormatDelegate.class);
@@ -87,6 +88,7 @@ public class OrderFormat
     private final static OrderFormatDelegate authorDelegate = new OrderFormatAuthor();
     private final static OrderFormatDelegate titleDelegate  = new OrderFormatTitle();
     private final static OrderFormatDelegate textDelegate   = new OrderFormatText();
+    private final static OrderFormatDelegate dateDelegate   = new OrderFormatDate();
     
     /**
      * Generate a sort string for the given DC metadata
@@ -122,6 +124,11 @@ public class OrderFormat
             if (type.equalsIgnoreCase(OrderFormat.TEXT) && textDelegate != null)
             {
               return textDelegate.makeSortString(value, language);
+            }
+            
+            if (type.equalsIgnoreCase(OrderFormat.DATE) && dateDelegate != null)
+            {
+              return dateDelegate.makeSortString(value, language);
             }
     	}
 
